# compiler

./: CMakeLists.txt  codegen tips.txt  runcmake.bat  semantic.rules  syntax.rules
lang/: test.ed
src/: analyzer.cpp  analyzer.hpp  argnode.cpp  argnode.hpp  assignnode.cpp  assignnode.hpp  astnode.cpp  astnode.hpp  binaryops.cpp  binaryops.hpp  compiler.cpp  declnode.cpp  declnode.hpp  error.hpp  funcdeclnode.cpp  funcdeclnode.hpp  ifnode.cpp  ifnode.hpp  inferdeclnode.cpp  inferdeclnode.hpp  lexer.cpp  lexer.hpp  numlitnode.cpp  numlitnode.hpp  parser.cpp  parser.hpp  retnode.cpp  retnode.hpp  seqnode.cpp  seqnode.hpp  structdeclnode.cpp  structdeclnode.hpp  symbol.cpp  symbol.hpp  test.cpp  test.hpp  token.cpp  token.hpp  typenode.cpp  typenode.hpp  (+5 more)
tests/: assign.ed  decl.ed  funcargsret.ed  funcargsvoid.ed  functions.ed  funcvoidvoid.ed  if.ed  ifelse.ed  inferdecl.ed  nestedif.ed  struct.ed
